# Audicle

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-plan.md  docker-compose.yml  entrypoint.sh  logo-spec.md  openapi.yaml  pyproject.toml  ui-mockup.html
.github/: dependabot.yml
.github/scripts/: check_chatterbox.py
.github/workflows/: chatterbox-monitor.yml  codeql.yml  dependency-review.yml
backend/app/: __init__.py  config.py  main.py  startup.py  version.py  worker.py
backend/app/api/: access_log.py  deps.py  errors.py  health.py  media.py  rss.py
backend/app/api/v1/: auth.py  chime.py  corrections.py  episodes.py  feed.py  jobs.py  llm.py  prompt.py  purge.py  reference.py  router.py  settings.py  source_fallbacks.py  status.py  submit.py  uploads.py  webhooks.py
backend/app/core/: database.py  paths.py  timestamps.py
backend/app/defaults/: pronunciation.json  pronunciation.txt  script.txt  summary.txt  tts_correction_list.csv
backend/app/prompts/: script.txt
backend/app/reference/: README.md
backend/app/services/: arc_extractor.py  archive.py  article_prep.py  artwork.py  asr_verify.py  atomic_write.py  audio.py  audio_analysis.py  auth.py  chunker.py  cleanup_output.py  corrections.py  csrf.py  direct_fetch.py  episodes.py  extraction.py  extraction_types.py  feed.py  file_extraction.py  flaresolverr.py  html_markdown.py  jobs.py  jsonld.py  lexicon.py  llm.py  pinned_fetch.py  pipeline.py  prompt.py  pronounce_convert.py  reachability.py  reader.py  render.py  retention.py  runtime_settings.py  seed_corrections.py  settings_store.py  slug.py  source_fallbacks.py  source_fallbacks_store.py  ssrf.py  (+4 more)
backend/app/utils/: logging.py
backend/tests/: conftest.py  test_access_log.py  test_api_auth.py  test_api_cancel.py  test_api_chime.py  test_api_episodes.py  test_api_feed_recreate.py  test_api_jobs.py  test_api_llm_models.py  test_api_media.py  test_api_prompt_corrections.py  test_api_purge.py  test_api_reference.py  test_api_requeue.py  test_api_rss.py  test_api_settings.py  test_api_source_fallbacks.py  test_api_uploads.py  test_api_v1.py  test_api_voice_slots.py  test_api_webhooks.py  test_arc_extractor.py  test_archive.py  test_article_prep.py  test_artwork.py  test_asr_verify.py  test_audio.py  test_audio_analysis.py  test_auth.py  test_build_base_lexicon.py  test_chunker.py  test_cleanup_output.py  test_client_ip.py  test_config.py  test_corrections.py  test_csrf.py  test_database.py  test_direct_fetch.py  test_episodes.py  test_extraction.py  (+36 more)
branding/: README.md  tokens.css  tokens.json
docs/superpowers/specs/: 2026-06-06-audicle-ios-shortcut-design.md  2026-06-16-remove-pseudo-phonetic-respellings-design.md  2026-06-17-stealth-render-sidecar-design.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AudioPlayer.tsx  CollapsibleSection.tsx  OpenModeBanner.tsx  PullToRefresh.tsx
frontend/src/lib/: api.ts  auth.tsx  format.ts  useHealthLive.ts  usePullToRefresh.ts
frontend/src/routes/: Feed.tsx  Home.tsx  Login.tsx  Settings.tsx
ios-shortcut/: Audicle.shortcut  README.md  build-audicle-shortcut.py  verify-audicle-api.sh
render/: .dockerignore  Dockerfile  README.md  camoufox_renderer.py  entrypoint.sh  main.py  pyproject.toml  renderer.py
render/tests/: test_expand.py  test_main.py
scripts/: build_base_lexicon.py  dump_openapi.py  retune_respellings.py  sync_version.py  tts_respell_probe.py
tts-wrapper/: .dockerignore  Dockerfile  Dockerfile.cpu  README.md  chatterbox_engine.py  config.py  engine.py  install_engine.sh  log_setup.py  main.py  pyproject.toml  style_engine.py  whisper_verify.py
tts-wrapper/tests/: test_chatterbox_engine.py  test_engine.py  test_engine_helpers.py  test_main.py  test_style_engine.py
