[project]
name = "audicle"
version = "0.38.0"
description = "Self-hosted service that turns article URLs into a Podcasting 2.0 feed."
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "ttlequals0" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "tenacity>=9.0",
    # HTML -> article markdown for the FlareSolverr extraction strategy. That
    # service returns solved HTML (not a URL Firecrawl can scrape), so trafilatura
    # pulls the main article body out of it before the cleanup stage.
    "trafilatura>=2.0",
    # Phase 5 audio pipeline. CPU-only torch wheel because the main app never
    # runs GPU inference -- that's the tts-wrapper container's job. soundfile
    # handles WAV I/O without torchaudio's TorchCodec dependency.
    "torch>=2.4",
    "numpy>=1.26",
    "soundfile>=0.12",
    "mutagen>=1.47",
    # Phase 6 artwork. Pillow reads JPEG/PNG/WebP/GIF/BMP/TIFF.
    "pillow>=10.4",
    # Phase 7 RSS feed. feedgen renders the iTunes/Atom/PSC namespaces; PC2
    # tags are appended via string-level XML construction afterwards because
    # feedgen doesn't model the namespace natively.
    "feedgen>=1.0",
    # defusedxml.ElementTree.fromstring blocks XXE / billion-laughs / DTD
    # retrieval that stdlib xml.etree allows by default. The feed parser
    # only ever reads feedgen's own output (no attacker input), but
    # defense-in-depth is cheap and the linter flags any stdlib XML parse.
    "defusedxml>=0.7",
    # Phase 9 auth. bcrypt for password hashing; itsdangerous for the
    # SessionMiddleware cookie signing; slowapi for the login-endpoint
    # rate limiter.
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "slowapi>=0.1.9",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.30",
    "gruut>=2.4.0",
    # Direct file upload (0.30.0): parse uploaded PDF/DOCX into article text. HTML
    # reuses the existing trafilatura path (html_markdown); md/txt are read directly.
    "pypdf>=5.1",
    "python-docx>=1.1",
]

# Offline base-lexicon build only (scripts/build_base_lexicon.py). Heavy/optional;
# not installed in the runtime image. Install with `uv sync --group lexicon-build`.
[project.optional-dependencies]
lexicon-build = [
    "pysle>=4.0",
    "huggingface-hub>=0.20",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# PEP 735 dependency groups: `uv sync --no-dev` excludes these in the runtime
# image; `uv sync --group dev` (or the default `uv sync`) installs them for
# local development and CI.
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
