[project]
name = "audicle-tts-wrapper"
version = "0.19.1"
description = "FastAPI TTS wrapper for Audicle (Chatterbox / XTTS-v2 / StyleTTS2)."
requires-python = ">=3.11,<3.13"
# 3.11 lower bound: torch wheels for the TTS engines lag the latest Python.
# 3.13 upper bound: chatterbox-tts caps numpy<2 below 3.13, and coqui's torch
# wheels lag too. (Backend pyproject pins >=3.13; two Python versions in one repo
# is the pragmatic compromise. Each package has its own venv.)
license = { text = "MPL-2.0" }
authors = [{ name = "ttlequals0" }]

# Core deps are engine-agnostic: the FastAPI wrapper, validation, and numpy for
# WAV encoding. Each TTS engine is an optional extra (below) so the dev/test
# environment and each image install only the one backend they need.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26,<3.0",
]

# One optional extra per engine, installed into its image via a build arg
# (Dockerfile TTS_BACKEND) and selected at runtime via TTS_ENGINE. They are
# MUTUALLY EXCLUSIVE: chatterbox-tts pins transformers==5.2.0 while coqui-tts
# needs <4.49 at runtime, so never install more than one engine extra in one
# image.
#
# xtts: the wrapper reaches into ``model.synthesizer.tts_model``
# get_conditioning_latents/inference (Coqui internals not covered by semver), so
# pin a tested range and bump deliberately. NOTE: Coqui shut down; this engine is
# retained for fallback/tests, with chatterbox the default going forward.
# styletts2: gruut (MIT) is the IPA phonemizer; styletts2 is the clone model.
# chatterbox: Resemble AI's actively maintained zero-shot clone model (Turbo).
[project.optional-dependencies]
xtts = ["coqui-tts>=0.24,<0.25"]
styletts2 = [
    "styletts2>=0.1",
    "gruut[en]>=2.4",
]
chatterbox = ["chatterbox-tts>=0.1.7"]
# NOTE: chatterbox-tts pins ``diffusers==0.29.0`` transitively, which carries two
# HIGH advisories (CVE-2026-44513, CVE-2026-45804) -- both ``trust_remote_code`` /
# TOCTOU remote-code-load bypasses, fixed only in diffusers 0.38.0. Not reachable
# here: chatterbox imports diffusers only for its flow-matching decoder and never
# uses ``trust_remote_code``, and the wrapper loads only the trusted Chatterbox
# weights. Cannot bump diffusers without overriding chatterbox's pin; revisit when
# chatterbox-tts ships a release that moves off 0.29.0.
# NOTE: coqui-tts 0.24 declares ``transformers>=4.43.0`` with no upper bound, so
# a fresh resolve pulls transformers 5.x whose lazy-import API coqui can't use
# (ModuleNotFoundError: GPT2PreTrainedModel at XTTS import). The required cap
# (``transformers>=4.48.0,<4.49``) is applied at install time in install_engine.sh
# rather than here: pinning it in the manifest would surface coqui's transitive
# transformers as a direct dependency to dependency-review, which flags HIGH
# advisories on the only transformers line coqui works with. The advisories
# concern untrusted-model deserialization; the wrapper only loads the trusted
# XTTS-v2 weights, so the path is not reachable, and the cap is an unavoidable
# install constraint of coqui-tts 0.24, not a dependency this project chooses.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The wrapper is a flat layout of three top-level modules. Declare them
# explicitly: modern setuptools refuses to auto-discover a flat layout with
# multiple top-level modules, which breaks ``pip install .`` on a current
# Python base image (older bases shipped a lenient setuptools that hid this).
[tool.setuptools]
py-modules = ["config", "engine", "main", "style_engine", "chatterbox_engine"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
