[project]
name = "audicle-tts-wrapper"
version = "0.39.3"
description = "FastAPI TTS wrapper for Audicle (Chatterbox)."
requires-python = ">=3.11,<3.13"
# 3.11 lower bound: torch wheels for the TTS engine lag the latest Python.
# 3.13 upper bound: chatterbox-tts caps numpy<2 below 3.13. (Backend pyproject
# pins >=3.13; two Python versions in one repo is the pragmatic compromise. Each
# package has its own venv.)
license = { text = "MPL-2.0" }
authors = [{ name = "ttlequals0" }]

# Core deps are engine-agnostic: the FastAPI wrapper, validation, and numpy for
# WAV encoding. The TTS engine and the ASR backend are optional extras (below) so
# the dev/test environment installs neither heavy stack.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26,<3.0",
]

# chatterbox: Resemble AI's actively maintained zero-shot clone model (Turbo).
[project.optional-dependencies]
chatterbox = ["chatterbox-tts>=0.1.7"]
# whisper: optional faster-whisper (CTranslate2) ASR for the post-TTS verification
# pass. CTranslate2 is independent of the engine's torch stack. Installed into
# every image but import-gated at runtime by WHISPER_ENABLED -- the model only
# loads when an operator turns verification on.
whisper = ["faster-whisper>=1.0"]
# NOTE: chatterbox-tts 0.1.7 hard-pins two transitive deps that each carry HIGH
# advisories, neither reachable in this wrapper:
#   * ``diffusers==0.29.0`` -- CVE-2026-44513 / CVE-2026-45804, ``trust_remote_code``
#     / TOCTOU remote-code-load bypasses (fixed in 0.38.0). Chatterbox imports
#     diffusers only for its flow-matching decoder, never sets ``trust_remote_code``,
#     and the wrapper loads only trusted Chatterbox weights.
#   * ``gradio==6.8.0`` -> ``starlette<1.0`` -- CVE-2026-48818 / CVE-2026-54283,
#     ``request.form()`` DoS (fixed in starlette 1.1.0 / 1.3.1). The wrapper exposes
#     only JSON and GET endpoints (no form/multipart parsing) and never imports gradio.
# Both are blocked by chatterbox's exact pins; clearing them means overriding those
# pins, which risks the TTS engine for zero real exposure reduction. No upstream
# relief is available -- 0.1.7 (latest) and master keep both pins, and the relax-pins
# PR (resemble-ai/chatterbox#486) is stale with conflicts. Revisit when chatterbox-tts
# ships a release that moves off these pins.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The wrapper is a flat layout of top-level modules. Declare them explicitly:
# modern setuptools refuses to auto-discover a flat layout with multiple
# top-level modules, which breaks ``pip install .`` on a current Python base
# image (older bases shipped a lenient setuptools that hid this).
[tool.setuptools]
py-modules = ["config", "engine", "main", "chatterbox_engine"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
